Project

General

Profile

Actions

Bug #11211

closed

defined(foo.bar) calls respond_to_missing? everytime

Bug #11211: defined(foo.bar) calls respond_to_missing? everytime

Added by ko1 (Koichi Sasada) over 11 years ago. Updated almost 11 years ago.

Status:
Closed
Target version:
-
[ruby-dev:49011]

Description

class C
  def respond_to_missing? *args
    p args
  end
  def existing_method; end
end

p defined?(C.new.existing_method)

This script prints

[:existing_method, false]
"method"

even though exsiting_method is defiend.

It should be a bug.

Actions

Also available in: PDF Atom