* vm_insnhelper.c (vm_defined): skip respond_to_missing? when   a method is available.   [Bug #11211] * test/ruby/test_defined.rb: add a test for this fix.

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@50737 b2dd03c8-39d4-4d8f-98ff-823fe69b080e